Totally reworked Step interface
Temporarily disabled approaches:
mean matching
MICE
Cosine similarity

--- a/6.2022/research.ipynb
+++ b/6.2022/research.ipynb
@@ -19,6 +19,10 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from lightgbm import LGBMRegressor\n",
     "\n",
+    "import tensorflow as tf\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Input, BatchNormalization\n",
+    "\n",
     "\n",
     "valid_true, valid = aux.train_valid_split(aux.data, frac=0.0125, seed=19)"
    ]
@@ -115,38 +119,195 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.05, backend='threading', seed=17),\n",
-    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "predicted = aux.ImputeHelper(\n",
-    "    aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "    aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.15, backend='threading', seed=17),\n",
-    "    aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
-    ").run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# %%time\n",
     "# predicted = aux.ImputeHelper(\n",
     "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "#     aux.Step(aux.mice, aux.subcol[1] + aux.subcol[3], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=20, autosplit=False),\n",
+    "#     aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.7, subsample=0.05, backend='threading', seed=17),\n",
+    "#     aux.Step(aux.transformer, 'all', imputer=SimpleImputer()),\n",
     "# ).run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [13:08<00:00, 39.43s/it, avg. score=0.581]\n",
+      "Final validation: 100%|██████████| 20/20 [00:00<00:00, 470.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.6688705070162656\n",
+      "Overall final score: 0.06564987610368235\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
+    "prepared = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "5987/5987 [==============================] - 16s 3ms/step - loss: 1.0001 - mse: 1.0001\n",
+      "Epoch 2/3\n",
+      "5987/5987 [==============================] - 17s 3ms/step - loss: 1.0001 - mse: 1.0001\n",
+      "Epoch 3/3\n",
+      "5987/5987 [==============================] - 17s 3ms/step - loss: 1.0000 - mse: 1.0000\n",
+      "5987/5987 [==============================] - 9s 2ms/step\n",
+      "5413/5413 [==============================] - 8s 2ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 35/35 [00:00<00:00, 380.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.9988624634525739\n",
+      "Overall final score: 0.1018428030899562\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NN approach\n",
+    "tf.random.set_seed(11)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    Input(shape=(45, )),\n",
+    "    # Dense(512, activation='selu'),\n",
+    "    Dense(512, activation='selu'),\n",
+    "    Dense(512, activation='selu'),\n",
+    "    Dense(35, activation='sigmoid'),\n",
+    "])\n",
+    "\n",
+    "# SGD / RMSprop / Adam / Adadelta / Adagrad / Adamax / Nadam / Ftrl\n",
+    "model.compile(optimizer='adam', loss='mse', metrics='mse')\n",
+    "pipeline = make_pipeline(\n",
+    "    SimpleImputer(),\n",
+    "    model\n",
+    ")\n",
+    "\n",
+    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
+    "pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
+    "             *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
+    "\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    # aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
+    ").run(prepared, validate_on=valid_true)\n",
+    "# it's an improve if is better than\n",
+    "# Final validation score: 0.8783267769946155\n",
+    "# Overall final score: 0.10180127772818637"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [12:37<00:00, 37.89s/it, avg. score=0.797]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "329/329 [==============================] - 2s 3ms/step - loss: 1.0082 - mse: 1.0082\n",
+      "Epoch 2/3\n",
+      "329/329 [==============================] - 1s 3ms/step - loss: 1.0045 - mse: 1.0045\n",
+      "Epoch 3/3\n",
+      "329/329 [==============================] - 1s 3ms/step - loss: 1.0045 - mse: 1.0045\n",
+      "329/329 [==============================] - 1s 1ms/step\n",
+      "   97/11071 [..............................] - ETA: 17s"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-25 00:25:21.865953: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 549817728 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11071/11071 [==============================] - 17s 2ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 55/55 [00:00<00:00, 242.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.9662174870419447\n",
+      "Overall final score: 0.11153378677407988\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sub#2 to dummies\n",
+    "df = pd.concat([aux.subset[1], pd.get_dummies(aux.subset[2].astype('category')), aux.subset[3], aux.subset[4]], axis=1)\n",
+    "df_valid_true, df_valid = aux.train_valid_split(df, frac=0.0125, seed=19)\n",
+    "\n",
+    "tf.random.set_seed(11)\n",
+    "model = Sequential([\n",
+    "    Input(shape=(388, )),\n",
+    "    # Dense(512, activation='selu'),\n",
+    "    Dense(512, activation='tanh'),\n",
+    "    Dense(512, activation='tanh'),\n",
+    "    Dense(35, activation='sigmoid'),\n",
+    "])\n",
+    "\n",
+    "# SGD / RMSprop / Adam / Adadelta / Adagrad / Adamax / Nadam / Ftrl\n",
+    "model.compile(optimizer='adam', loss='mse', metrics='mse')\n",
+    "pipeline = make_pipeline(\n",
+    "    SimpleImputer(),\n",
+    "    model\n",
+    ")\n",
+    "\n",
+    "add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
+    "pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
+    "             *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
+    "\n",
+    "predicted = aux.ImputeHelper(\n",
+    "    aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "    aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
+    ").run(df_valid, validate_on=df_valid_true)"
    ]
   },
   {
@@ -158,27 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.cosine_stats, aux.subcol[1] + aux.subcol[2], threshold=0.7, backend='loky', chunksize=50, subsample=.0001),\n",
-    "# ).run(valid, validate_on=valid_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,16 +343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aux.save_submission(predicted)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#"
+    "# default\n",
+    "# Final validation score: 0.8783267769946155\n",
+    "# Overall final score: 0.10180127772818637"
    ]
   }
  ],
