--- a/6.2022/subresearch/subset_1.ipynb
+++ b/6.2022/subresearch/subset_1.ipynb
@@ -530,6 +530,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using `cosine_stats()` is deprecated! It may take a VERY long time on large data, work unstable or don't work at all.\n",
+      "36834 rows in 737 chunks\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 737/737 [16:36<00:00,  1.35s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some values are NaN. Try decrease threshold.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 375.66it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.948455967517788\n",
+      "Overall final score: 0.07893368806759937\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = aux.ImputeHelper(\n",
+    "    # Step(transformer, subcol[1], imputer=SimpleImputer()),\n",
+    "    # Step(transformer, subcol[1], imputer=IterativeImputer(SGDRegressor(), max_iter=50, random_state=11)),\n",
+    "    # Step(transformer, subcol[1], imputer=SimpleImputer(), max_fill_nan_count=1),\n",
+    "    aux.Step(aux.cosine_stats, aux.subcol[1], threshold=0.8, subsample=0.5, backend='threading', seed=17, max_fill_nan_count=1),\n",
+    "    # Step(predictor, subcol[1], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=100, num_leaves=29)),\n",
+    "    # Step(mice, subcol[1], estimator=SGDRegressor(), epochs=10, seed=11, autosplit=False),\n",
+    "    aux.Step(aux.transformer, aux.subcol[1], imputer=SimpleImputer()),\n",
+    ").run(valid, validate_on=valid_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
