--- a/6.2022/subresearch/subset_4.ipynb
+++ b/6.2022/subresearch/subset_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L1 = ['a', 'b']\n",
+    "L2 = ['c']\n",
+    "len(set(L1).intersection(L2)) == len(set(L1)) == len(set(L2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 457.24it/s]\n"
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 384.83it/s]\n"
      ]
     },
     {
@@ -64,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 460.15it/s]\n"
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 421.08it/s]\n"
      ]
     },
     {
@@ -98,14 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 10/15 [08:59<05:14, 62.87s/it, avg. score=0.618]"
+      "100%|██████████| 15/15 [08:59<00:00, 35.96s/it, avg. score=0.555]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 442.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 0.6478440903133111\n",
+      "Overall final score: 0.0603447382289857\n"
      ]
     }
    ],
@@ -124,9 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initiate values: 100%|██████████| 15/15 [01:20<00:00,  5.38s/it, avg. score=1.55]\n",
+      "Collect remapper: 100%|██████████| 15/15 [00:00<00:00, 2332.85it/s]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 393.98it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9108438206748157\n",
+      "Overall final score: 0.1827651397711478\n"
+     ]
+    }
+   ],
    "source": [
     "pipeline = make_pipeline(\n",
     "    SimpleImputer(),\n",
@@ -140,9 +189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initiate values: 100%|██████████| 15/15 [01:26<00:00,  5.78s/it, avg. score=1.49]\n",
+      "Collect remapper: 100%|██████████| 15/15 [00:00<00:00, 6456.09it/s]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 446.51it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.909850799324801\n",
+      "Overall final score: 0.18259287260794207\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "pipeline = make_pipeline(\n",
     "    SimpleImputer(),\n",
@@ -156,9 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Initiate values: 100%|██████████| 15/15 [00:07<00:00,  1.88it/s, avg. score=1.73]\n",
+      "Collect remapper: 100%|██████████| 15/15 [00:00<00:00, 888.18it/s]\n",
+      "Final validation: 100%|██████████| 15/15 [00:00<00:00, 401.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final validation score: 1.9107521843225386\n",
+      "Overall final score: 0.1827374542731559\n"
+     ]
+    }
+   ],
    "source": [
     "predicted = aux.ImputeHelper(\n",
     "    aux.Step(aux.mean_matching, aux.subcol[sn], N=2500, init=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=5, num_leaves=13), backend='threading'),\n",
@@ -274,7 +366,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0.9054178709836844 / 0.444"
+    "# Final validation score: 0.6478440903133111\n",
+    "# Overall final score: 0.0603447382289857"
    ]
   }
  ],
