--- a/6.2022/submit.ipynb
+++ b/6.2022/submit.ipynb
@@ -8,24 +8,21 @@
    "source": [
     "import auxiliary as aux\n",
     "\n",
+    "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
     "from lightgbm import LGBMRegressor\n",
-    "from sklearn.linear_model import SGDRegressor"
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15/15 [53:26<00:00, 213.79s/it, avg. score=0.444]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# Kaggle 0.88964\n",
@@ -37,62 +34,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [21:01<00:00, 84.11s/it]\n"
+      "100%|██████████| 20/20 [34:51<00:00, 104.58s/it, avg. score=0.621]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "ML Imputer avg. score: 0.5946655547740403\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 / 20: 100%|██████████| 40/40 [02:57<00:00,  4.43s/it]\n",
-      "Epoch 2 / 20: 100%|██████████| 40/40 [02:45<00:00,  4.14s/it]\n",
-      "Epoch 3 / 20: 100%|██████████| 40/40 [02:45<00:00,  4.15s/it]\n",
-      "Epoch 4 / 20: 100%|██████████| 40/40 [02:46<00:00,  4.16s/it]\n",
-      "Epoch 5 / 20: 100%|██████████| 40/40 [02:45<00:00,  4.13s/it]\n",
-      "Epoch 6 / 20: 100%|██████████| 40/40 [02:42<00:00,  4.06s/it]\n",
-      "Epoch 7 / 20: 100%|██████████| 40/40 [02:44<00:00,  4.11s/it]\n",
-      "Epoch 8 / 20: 100%|██████████| 40/40 [02:51<00:00,  4.28s/it]\n",
-      "Epoch 9 / 20: 100%|██████████| 40/40 [02:43<00:00,  4.08s/it]\n",
-      "Epoch 10 / 20: 100%|██████████| 40/40 [02:39<00:00,  3.99s/it]\n",
-      "Epoch 11 / 20: 100%|██████████| 40/40 [02:39<00:00,  3.98s/it]\n",
-      "Epoch 12 / 20: 100%|██████████| 40/40 [02:39<00:00,  3.99s/it]\n",
-      "Epoch 13 / 20: 100%|██████████| 40/40 [02:44<00:00,  4.11s/it]\n",
-      "Epoch 14 / 20: 100%|██████████| 40/40 [02:45<00:00,  4.14s/it]\n",
-      "Epoch 15 / 20: 100%|██████████| 40/40 [02:40<00:00,  4.01s/it]\n",
-      "Epoch 16 / 20: 100%|██████████| 40/40 [02:43<00:00,  4.09s/it]\n",
-      "Epoch 17 / 20: 100%|██████████| 40/40 [02:51<00:00,  4.29s/it]\n",
-      "Epoch 18 / 20: 100%|██████████| 40/40 [02:46<00:00,  4.17s/it]\n",
-      "Epoch 19 / 20: 100%|██████████| 40/40 [02:45<00:00,  4.15s/it]\n",
-      "Epoch 20 / 20: 100%|██████████| 40/40 [02:43<00:00,  4.09s/it]\n"
+      "Epoch 1/3\n",
+      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0001 - mse: 1.0001\n",
+      "Epoch 2/3\n",
+      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0001 - mse: 1.0001\n",
+      "Epoch 3/3\n",
+      "16451/16451 [==============================] - 36s 2ms/step - loss: 1.0000 - mse: 1.0000\n",
+      "16451/16451 [==============================] - 19s 1ms/step\n",
+      "14800/14800 [==============================] - 18s 1ms/step\n"
      ]
     }
    ],
    "source": [
-    "# Kaggle 0.92113\n",
+    "# tf.random.set_seed(11)\n",
+    "\n",
+    "# model = Sequential([\n",
+    "#     Input(shape=(45, )),\n",
+    "#     Dense(512, activation='tanh'),\n",
+    "#     Dense(256, activation='sigmoid'),\n",
+    "#     Dense(35, activation='tanh'),\n",
+    "# ])\n",
+    "\n",
+    "# model.compile(optimizer='ftrl', loss='mse', metrics='mse')\n",
+    "# pipeline = make_pipeline(\n",
+    "#     SimpleImputer(),\n",
+    "#     model\n",
+    "# )\n",
+    "\n",
+    "# add_cols = ['F_1_7', 'F_1_12', 'F_1_13'] + ['F_3_19', 'F_3_21']\n",
+    "# pred_cols = [*[f'F_1_{n}' for n in range(15) if n not in (7, 12, 13)],\n",
+    "#              *[f'F_3_{n}' for n in range(25) if n not in (19, 21)]]\n",
+    "\n",
     "# predicted = aux.ImputeHelper(\n",
-    "#     aux.Step(aux.predictor, aux.subcol[4], estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
-    "#     aux.Step(aux.mice, aux.subcol[1] + aux.subcol[3], estimator=SGDRegressor(random_state=7, max_iter=1000), epochs=20, autosplit=False),\n",
+    "#     aux.Step(aux.predictor, aux.subcol[4] + add_cols, estimator=LGBMRegressor(random_state=7, n_jobs=-1, n_estimators=1500, num_leaves=29)),\n",
+    "#     aux.Step(aux.onestep_neural, 'all', pipeline, fill_columns=pred_cols, sequential__epochs=3),\n",
     "# ).run(aux.data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -132,27 +127,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0-F_1_14</td>\n",
-       "      <td>-0.000905</td>\n",
+       "      <td>-0.000473</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0-F_3_23</td>\n",
-       "      <td>0.000365</td>\n",
+       "      <td>-0.000291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1-F_3_24</td>\n",
-       "      <td>-0.000817</td>\n",
+       "      <td>0.006922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2-F_1_2</td>\n",
-       "      <td>0.000551</td>\n",
+       "      <td>-0.006544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2-F_4_2</td>\n",
-       "      <td>0.233380</td>\n",
+       "      <td>0.205987</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -160,14 +155,14 @@
       ],
       "text/plain": [
        "    row-col     value\n",
-       "0  0-F_1_14 -0.000905\n",
-       "1  0-F_3_23  0.000365\n",
-       "2  1-F_3_24 -0.000817\n",
-       "3   2-F_1_2  0.000551\n",
-       "4   2-F_4_2  0.233380"
+       "0  0-F_1_14 -0.000473\n",
+       "1  0-F_3_23 -0.000291\n",
+       "2  1-F_3_24  0.006922\n",
+       "3   2-F_1_2 -0.006544\n",
+       "4   2-F_4_2  0.205987"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
